# ahi

./: Cargo.toml  LICENSE  Makefile  README.org  TODO.txt  ahi.cpp  draw.cpp  draw.go  draw.h  event.go  event.h  go.mod  lcg.h  main.go  meson.build  snake.go  state.go  vec2.h  world.go  world.h
src/: ahi.cpp  config.h  draw.cpp  draw.h  draw.rs  event.cpp  event.h  event.rs  lcg.h  main.rs  sdl.h  vec2.h  world.h  world.rs
subprojects/raylib/: README.md  meson.build
